--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -192,12 +192,14 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\objects\ball.cpp" />
+    <ClCompile Include="src\objects\brick.cpp" />
     <ClCompile Include="src\objects\player.cpp" />
     <ClCompile Include="src\scenes\gameUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\objects\ball.h" />
+    <ClInclude Include="src\objects\brick.h" />
     <ClInclude Include="src\objects\player.h" />
     <ClInclude Include="src\scenes\gameUI.h" />
     <ClInclude Include="src\utilities.h" />
