--- a/CrabOut.vcxproj.filters
+++ b/CrabOut.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\scenes\gameUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\objects\brick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\scenes\gameUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\objects\brick.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
