--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -107,7 +107,8 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y</Command>
+      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
+ xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -134,7 +135,8 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y</Command>
+      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
+ xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -158,7 +160,8 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y</Command>
+      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
+ xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -185,7 +188,8 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y</Command>
+      <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
+ xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
