--- a/CrabOut.vcxproj.filters
+++ b/CrabOut.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\objects\brick.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\scenes\menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\objects\brick.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scenes\menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
