--- a/CrabOut.vcxproj.filters
+++ b/CrabOut.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\scenes\menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="powerUp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\scenes\menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="powerUp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
