--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -193,21 +193,21 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="powerUp.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\objects\ball.cpp" />
     <ClCompile Include="src\objects\brick.cpp" />
     <ClCompile Include="src\objects\player.cpp" />
+    <ClCompile Include="src\objects\powerUp.cpp" />
     <ClCompile Include="src\scenes\gameUI.cpp" />
     <ClCompile Include="src\scenes\menu.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="powerUp.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\objects\ball.h" />
     <ClInclude Include="src\objects\brick.h" />
     <ClInclude Include="src\objects\player.h" />
+    <ClInclude Include="src\objects\powerUp.h" />
     <ClInclude Include="src\scenes\gameUI.h" />
     <ClInclude Include="src\scenes\menu.h" />
     <ClInclude Include="src\utilities.h" />
