--- a/CrabOut.vcxproj.filters
+++ b/CrabOut.vcxproj.filters
@@ -65,5 +65,21 @@
     <ClInclude Include="src\objects\powerUp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\Title.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\Title.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="IcocnoExe.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
