--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -207,12 +207,12 @@
     <ClCompile Include="src\scenes\menu.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\objects\ball.h" />
     <ClInclude Include="src\objects\brick.h" />
     <ClInclude Include="src\objects\player.h" />
     <ClInclude Include="src\objects\powerUp.h" />
+    <ClInclude Include="src\resource.h" />
     <ClInclude Include="src\scenes\gameUI.h" />
     <ClInclude Include="src\scenes\menu.h" />
     <ClInclude Include="src\utilities.h" />
