--- a/CrabOut.vcxproj.filters
+++ b/CrabOut.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClInclude Include="src\objects\powerUp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
+    <ClInclude Include="src\resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
