update xcopy command

--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -108,8 +108,8 @@
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)" /s /y</Command>
+
+ xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -137,8 +137,8 @@
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)" /s /y</Command>
+
+ xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -163,8 +163,8 @@
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)" /s /y</Command>
+
+ xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -192,8 +192,8 @@
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.ttf" "$(OutDir)" /s /y
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)" /s /y</Command>
+
+ xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
