--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -109,7 +109,7 @@
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
 
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
+ xcopy "$(ProjectDir)\res" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -138,7 +138,7 @@
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
 
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
+ xcopy "$(ProjectDir)\res" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -164,7 +164,7 @@
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
 
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
+ xcopy "$(ProjectDir)\res" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -193,7 +193,7 @@
     <PostBuildEvent>
       <Command>    xcopy "$(ProjectDir)\lib\sigil-vc2015\*.dll" "$(OutDir)" /s /y
 
- xcopy "$(ProjectDir)\res\*.png" "$(OutDir)res\" /s /y</Command>
+ xcopy "$(ProjectDir)\res" "$(OutDir)res\" /s /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
