change runtime lib prop

--- a/CrabOut.vcxproj
+++ b/CrabOut.vcxproj
@@ -123,6 +123,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)\lib\sigil-vc2015\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalModuleDependencies>
       </AdditionalModuleDependencies>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
